deploy: 162f94076fd48bd5ffd2e58cc4a17f0b44165525

--- a/91/index.html
+++ b/91/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Allure Report</title>
-    <link rel="favicon" href="favicon.ico">
+    <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="plugin/screen-diff/styles.css">
 </head>
@@ -26,7 +26,7 @@
         gtag('js', new Date());
         gtag('config', 'G-FVWC4GKEYS', {
           'allureVersion': 'dev',
-          'reportUuid': 'c2de6ceb-7c96-4969-b6b3-318ade3f8434',
+          'reportUuid': '94e3767f-bcd4-42f2-9a3a-ee1900782f98',
           'single_file': false
         });
     </script>
